.gitignore fix, added ws.delete()

--- a/00_AML_Configuration.ipynb
+++ b/00_AML_Configuration.ipynb
@@ -101,10 +101,10 @@
    },
    "outputs": [],
    "source": [
-    "# subscription_id ='<YOUR_SUBSCRIPTION_ID>'\n",
-    "# resource_group ='<YOUR_RESOURCE_GROUP>'\n",
-    "# workspace_name = '<YOUR_WORKSPACE_NAME>'\n",
-    "# workspace_region ='<YOUR_WORKSPACE_REGION>"
+    "# subscription_id = \"<YOUR_SUBSCRIPTION_ID>\"\n",
+    "# resource_group = \"<YOUR_RESOURCE_GROUP>\"\n",
+    "# workspace_name = \"<YOUR_WORKSPACE_NAME>\"\n",
+    "# workspace_region = \"<YOUR_WORKSPACE_REGION>\""
    ]
   },
   {
@@ -132,10 +132,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "set_key(env_path, 'subscription_id', subscription_id) # Replace YOUR_AZURE_SUBSCRIPTION\n",
-    "set_key(env_path, 'resource_group', resource_group)\n",
-    "set_key(env_path, 'workspace_name', workspace_name)\n",
-    "set_key(env_path, 'workspace_region', workspace_region)"
+    "set_key(env_path, \"subscription_id\", subscription_id) # Replace YOUR_AZURE_SUBSCRIPTION\n",
+    "set_key(env_path, \"resource_group\", resource_group)\n",
+    "set_key(env_path, \"workspace_name\", workspace_name)\n",
+    "set_key(env_path, \"workspace_region\"', workspace_region)"
    ]
   },
   {
