--- a/07_Tear_Down.ipynb
+++ b/07_Tear_Down.ipynb
@@ -166,6 +166,23 @@
     "%%time\n",
     "aks_target.delete()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you also would like to delete the workspace and all experiments in it, you can use the following."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "ws.delete()"
+   ]
   }
  ],
  "metadata": {
