--- a/00_AML_Configuration.ipynb
+++ b/00_AML_Configuration.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,13 +45,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "install"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AML SDK Version: 1.0.2\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"AML SDK Version:\", azureml.core.VERSION) # 1.0.2"
    ]
@@ -93,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "parameters"
@@ -104,7 +112,11 @@
     "# subscription_id = \"<YOUR_SUBSCRIPTION_ID>\"\n",
     "# resource_group = \"<YOUR_RESOURCE_GROUP>\"\n",
     "# workspace_name = \"<YOUR_WORKSPACE_NAME>\"\n",
-    "# workspace_region = \"<YOUR_WORKSPACE_REGION>\""
+    "# workspace_region = \"<YOUR_WORKSPACE_REGION>\"\n",
+    "subscription_id = \"edf507a2-6235-46c5-b560-fd463ba2e771\"\n",
+    "resource_group = \"fboyluamlsdkrg\"\n",
+    "workspace_name = \"fboyluamlsdkws\"\n",
+    "workspace_region = \"eastus2\""
    ]
   },
   {
@@ -116,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,14 +140,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, 'workspace_region', 'eastus2')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "set_key(env_path, \"subscription_id\", subscription_id) # Replace YOUR_AZURE_SUBSCRIPTION\n",
     "set_key(env_path, \"resource_group\", resource_group)\n",
     "set_key(env_path, \"workspace_name\", workspace_name)\n",
-    "set_key(env_path, \"workspace_region\"', workspace_region)"
+    "set_key(env_path, \"workspace_region\", workspace_region)"
    ]
   },
   {
@@ -155,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "create workspace"
@@ -183,9 +206,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': '/subscriptions/edf507a2-6235-46c5-b560-fd463ba2e771/resourceGroups/fboyluamlsdkrg/providers/Microsoft.MachineLearningServices/workspaces/fboyluamlsdkws',\n",
+       " 'name': 'fboyluamlsdkws',\n",
+       " 'location': 'eastus2',\n",
+       " 'type': 'Microsoft.MachineLearningServices/workspaces',\n",
+       " 'workspaceid': 'fcd4b3c7-ebc6-4299-8908-c50ef5f66c6c',\n",
+       " 'description': '',\n",
+       " 'friendlyName': '',\n",
+       " 'creationTime': '2018-09-25T20:09:54.8724577+00:00',\n",
+       " 'containerRegistry': '/subscriptions/edf507a2-6235-46c5-b560-fd463ba2e771/resourcegroups/fboyluamlsdkrg/providers/microsoft.containerregistry/registries/fboyluamlsdkws7798851753',\n",
+       " 'keyVault': '/subscriptions/edf507a2-6235-46c5-b560-fd463ba2e771/resourcegroups/fboyluamlsdkrg/providers/microsoft.keyvault/vaults/fboyluamlsdkws3546001921',\n",
+       " 'applicationInsights': '/subscriptions/edf507a2-6235-46c5-b560-fd463ba2e771/resourcegroups/fboyluamlsdkrg/providers/microsoft.insights/components/fboyluamlsdkws0185013565',\n",
+       " 'identityPrincipalId': 'a84f46ed-b80c-4b7a-af88-ca035bfa30a0',\n",
+       " 'identityTenantId': '72f988bf-86f1-41af-91ab-2d7cd011db47',\n",
+       " 'identityType': 'SystemAssigned',\n",
+       " 'storageAccount': '/subscriptions/edf507a2-6235-46c5-b560-fd463ba2e771/resourcegroups/fboyluamlsdkrg/providers/microsoft.storage/storageaccounts/fboyluamlsdkws4446310112'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ws.get_details()"
    ]
@@ -199,9 +247,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote the config file config.json to: /datadrive/MLAKSDeployAML/aml_config/config.json\n"
+     ]
+    }
+   ],
    "source": [
     "ws.write_config()"
    ]
