--- a/00_AML_Configuration.ipynb
+++ b/00_AML_Configuration.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,21 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "install"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AML SDK Version: 1.0.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"AML SDK Version:\", azureml.core.VERSION) # 1.0.2"
    ]
@@ -101,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "parameters"
@@ -112,11 +104,7 @@
     "# subscription_id = \"<YOUR_SUBSCRIPTION_ID>\"\n",
     "# resource_group = \"<YOUR_RESOURCE_GROUP>\"\n",
     "# workspace_name = \"<YOUR_WORKSPACE_NAME>\"\n",
-    "# workspace_region = \"<YOUR_WORKSPACE_REGION>\"\n",
-    "subscription_id = \"edf507a2-6235-46c5-b560-fd463ba2e771\"\n",
-    "resource_group = \"fboyluamlsdkrg\"\n",
-    "workspace_name = \"fboyluamlsdkws\"\n",
-    "workspace_region = \"eastus2\""
+    "# workspace_region = \"<YOUR_WORKSPACE_REGION>\""
    ]
   },
   {
@@ -128,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,20 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(True, 'workspace_region', 'eastus2')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "set_key(env_path, \"subscription_id\", subscription_id) # Replace YOUR_AZURE_SUBSCRIPTION\n",
     "set_key(env_path, \"resource_group\", resource_group)\n",
@@ -178,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "create workspace"
@@ -206,34 +183,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'id': '/subscriptions/edf507a2-6235-46c5-b560-fd463ba2e771/resourceGroups/fboyluamlsdkrg/providers/Microsoft.MachineLearningServices/workspaces/fboyluamlsdkws',\n",
-       " 'name': 'fboyluamlsdkws',\n",
-       " 'location': 'eastus2',\n",
-       " 'type': 'Microsoft.MachineLearningServices/workspaces',\n",
-       " 'workspaceid': 'fcd4b3c7-ebc6-4299-8908-c50ef5f66c6c',\n",
-       " 'description': '',\n",
-       " 'friendlyName': '',\n",
-       " 'creationTime': '2018-09-25T20:09:54.8724577+00:00',\n",
-       " 'containerRegistry': '/subscriptions/edf507a2-6235-46c5-b560-fd463ba2e771/resourcegroups/fboyluamlsdkrg/providers/microsoft.containerregistry/registries/fboyluamlsdkws7798851753',\n",
-       " 'keyVault': '/subscriptions/edf507a2-6235-46c5-b560-fd463ba2e771/resourcegroups/fboyluamlsdkrg/providers/microsoft.keyvault/vaults/fboyluamlsdkws3546001921',\n",
-       " 'applicationInsights': '/subscriptions/edf507a2-6235-46c5-b560-fd463ba2e771/resourcegroups/fboyluamlsdkrg/providers/microsoft.insights/components/fboyluamlsdkws0185013565',\n",
-       " 'identityPrincipalId': 'a84f46ed-b80c-4b7a-af88-ca035bfa30a0',\n",
-       " 'identityTenantId': '72f988bf-86f1-41af-91ab-2d7cd011db47',\n",
-       " 'identityType': 'SystemAssigned',\n",
-       " 'storageAccount': '/subscriptions/edf507a2-6235-46c5-b560-fd463ba2e771/resourcegroups/fboyluamlsdkrg/providers/microsoft.storage/storageaccounts/fboyluamlsdkws4446310112'}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ws.get_details()"
    ]
@@ -247,17 +199,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrote the config file config.json to: /datadrive/MLAKSDeployAML/aml_config/config.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ws.write_config()"
    ]
