changes to environment, README

--- a/01_Data_Prep.ipynb
+++ b/01_Data_Prep.ipynb
@@ -195,7 +195,7 @@
    "source": [
     "# Clean up all text, and keep only data with some clean text.\n",
     "for df in (questions, dupes, answers):\n",
-    "    df[\"Text\"] = df.Text0.apply(clean_text).str.lower()\n"
+    "    df[\"Text\"] = df.Text0.apply(clean_text).str.lower()"
    ]
   },
   {
