clean up and add scaling

--- a/02_Train_On_Local.ipynb
+++ b/02_Train_On_Local.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "ws = Workspace.from_config()\n",
-    "print(ws.name, ws.resource_group, ws.location, ws.subscription_id, sep=\"\\n\")"
+    "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
   },
   {
