--- a/03_Develop_Scoring_Script.ipynb
+++ b/03_Develop_Scoring_Script.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we will develop the scoring script and test it locally. The web service will use the scoring script to call the model."
+    "In this notebook, we will develop the scoring script and test it locally. We will use the scoring script to create the web service that will call the model for scoring."
    ]
   },
   {
@@ -70,7 +70,7 @@
    "outputs": [],
    "source": [
     "ws = Workspace.from_config()\n",
-    "print(ws.name, ws.resource_group, ws.location, ws.subscription_id, sep=\"\\n\")"
+    "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
   },
   {
