--- a/04_Create_Image_Deploy_On_AKS.ipynb
+++ b/04_Create_Image_Deploy_On_AKS.ipynb
@@ -19,7 +19,8 @@
     "- Test image locally\n",
     "- Provision an AKS cluster (one time action)\n",
     "- Deploy the service\n",
-    "- Test the web service."
+    "- Test the web service\n",
+    "- Scale up the service"
    ]
   },
   {
@@ -28,6 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
     "from utilities import text_to_json\n",
     "import requests\n",
@@ -102,7 +104,7 @@
    "outputs": [],
    "source": [
     "ws = Workspace.from_config()\n",
-    "print(ws.name, ws.resource_group, ws.location, ws.subscription_id, sep=\"\\n\")"
+    "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
   },
   {
@@ -325,7 +327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Provision the AKS Cluster\n",
+    "## Provision the AKS Cluster\n",
     "This is a one time setup. You can reuse this cluster for multiple deployments after it has been created. If you delete the cluster or the resource group that contains it, then you would have to recreate it."
    ]
   },
@@ -387,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deploy web service to AKS"
+    "## Deploy web service to AKS"
    ]
   },
   {
@@ -429,7 +431,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test the web service\n",
+    "You can check the logs of the web service with the below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aks_service.get_logs()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test the web service\n",
     "We now test the web sevice."
    ]
   },
@@ -555,6 +573,123 @@
    "outputs": [],
    "source": [
     "print(\"Average time taken: {0:4.2f} ms\".format(10 ** 3 * np.mean(timer_results)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scaling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this part, we scale the number of pods to make sure we fully utilize the AKS cluster. To connect to the Kubernetes cluster, we will use kubectl, the Kubernetes command-line client. To install, run the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sudo az aks install-cli"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we will get the credentials to connect to the cluster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_path = os.path.join(os.path.expanduser('~'),'.kube/config')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(config_path, 'a') as f:\n",
+    "    f.write(aks_target.get_credentials()['userKubeConfig'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's check the nodes and pods of the cluster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get pods --all-namespaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get events"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now scale up the number of pods."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl scale --current-replicas=2 --replicas=10 {\"deployment/\" + aks_service_name}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get pods --all-namespaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get deployment"
    ]
   },
   {
