added delete resource group and minor changes

--- a/04_Create_Image_Deploy_On_AKS.ipynb
+++ b/04_Create_Image_Deploy_On_AKS.ipynb
@@ -71,10 +71,10 @@
    },
    "outputs": [],
    "source": [
-    "# image_name = \"<YOUR_IMAGE_NAME>\"\n",
-    "# aks_service_name = \"<YOUR_AKS_SERVICE_NAME>\"\n",
-    "# aks_name = \"<YOUR_AKS_NAME>\"\n",
-    "# aks_location = \"<YOUR_AKS_LOCATION>\""
+    "image_name = \"<YOUR_IMAGE_NAME>\"\n",
+    "aks_service_name = \"<YOUR_AKS_SERVICE_NAME>\"\n",
+    "aks_name = \"<YOUR_AKS_NAME>\"\n",
+    "aks_location = \"<YOUR_AKS_LOCATION>\""
    ]
   },
   {
@@ -396,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we deploy the web service. We deploy two pods with 1 cpu core each."
+    "Next, we deploy the web service. We deploy two pods with 1 CPU core each."
    ]
   },
   {
@@ -603,6 +603,15 @@
    "metadata": {},
    "source": [
     "Next, we will get the credentials to connect to the cluster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs(os.path.join(os.path.expanduser('~'),'.kube'), exist_ok=True) "
    ]
   },
   {
