--- a/07_Tear_Down.ipynb
+++ b/07_Tear_Down.ipynb
@@ -183,6 +183,31 @@
     "%%time\n",
     "ws.delete()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, you can delete the resource group with the following."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resource_group = get_key(env_path, 'resource_group')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!az group delete --yes --name $resource_group"
+   ]
   }
  ],
  "metadata": {
