--- a/00_AML_Configuration.ipynb
+++ b/00_AML_Configuration.ipynb
@@ -101,10 +101,10 @@
    },
    "outputs": [],
    "source": [
-    "# subscription_id = \"<YOUR_SUBSCRIPTION_ID>\"\n",
-    "# resource_group = \"<YOUR_RESOURCE_GROUP>\"\n",
-    "# workspace_name = \"<YOUR_WORKSPACE_NAME>\"\n",
-    "# workspace_region = \"<YOUR_WORKSPACE_REGION>\""
+    "subscription_id = \"<YOUR_SUBSCRIPTION_ID>\"\n",
+    "resource_group = \"<YOUR_RESOURCE_GROUP>\"\n",
+    "workspace_name = \"<YOUR_WORKSPACE_NAME>\"\n",
+    "workspace_region = \"<YOUR_WORKSPACE_REGION>\""
    ]
   },
   {
