--- a/02_Train_On_Local.ipynb
+++ b/02_Train_On_Local.ipynb
@@ -140,6 +140,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In this section, we show three different ways of locally training your model through Azure ML SDK for demonstration purposes. Only one of these runs is sufficient to register the model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### User-managed environment\n",
     "Below, we use a user-managed run, which means you are responsible to ensure all the necessary packages that are available in the Python environment you choose to run the script. We will use the environment created for this tutorial which has Azure ML SDK and other dependencies installed."
