added check for available cores

--- a/04_Create_Image_Deploy_On_AKS.ipynb
+++ b/04_Create_Image_Deploy_On_AKS.ipynb
@@ -35,6 +35,7 @@
     "import requests\n",
     "import numpy as np\n",
     "import json\n",
+    "import subprocess\n",
     "from azureml.core import Workspace\n",
     "from azureml.core.compute import AksCompute, ComputeTarget\n",
     "from azureml.core.webservice import Webservice, AksWebservice\n",
@@ -328,7 +329,59 @@
    "metadata": {},
    "source": [
     "## Provision the AKS Cluster\n",
-    "This is a one time setup. You can reuse this cluster for multiple deployments after it has been created. If you delete the cluster or the resource group that contains it, then you would have to recreate it."
+    "This is a one time setup. You can reuse this cluster for multiple deployments after it has been created. If you delete the cluster or the resource group that contains it, then you would have to recreate it. Let's first check if there are enough cores in the subscription for the cluster ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vm_dict = {\n",
+    "    \"Dv2\": {\n",
+    "        \"size\": \"Standard_D4_v2\",\n",
+    "        \"cores\": 8\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vm_family = \"Dv2\"\n",
+    "node_count = 2\n",
+    "requested_cores = node_count * vm_dict[vm_family][\"cores\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = subprocess.run([\n",
+    "    \"az\", \"vm\", \"list-usage\", \n",
+    "    \"--location\", get_key(env_path, \"aks_location\"), \n",
+    "    \"--query\", \"[?contains(localName, '%s')].{max:limit, current:currentValue}\" % (vm_family)\n",
+    "], stdout=subprocess.PIPE)\n",
+    "quota = json.loads(''.join(results.stdout.decode('utf-8')))\n",
+    "diff = int(quota[0]['max']) - int(quota[0]['current'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if diff <= requested_cores:\n",
+    "    print(\"Not enough cores of NCSv3 in region, asking for {} but have {}\".format(requested_cores, diff))\n",
+    "    raise Exception(\"Core Limit\", \"Note enough cores to satisfy request\")\n",
+    "print(\"There are enough cores, you may continue...\")"
    ]
   },
   {
