added service principal, pin AML version

--- a/04_Create_Image_Deploy_On_AKS.ipynb
+++ b/04_Create_Image_Deploy_On_AKS.ipynb
@@ -43,7 +43,8 @@
     "from azureml.core.model import Model\n",
     "from azureml.core.workspace import Workspace\n",
     "from azureml.core.conda_dependencies import CondaDependencies\n",
-    "from dotenv import set_key, get_key, find_dotenv"
+    "from dotenv import set_key, get_key, find_dotenv\n",
+    "from utilities import _get_auth"
    ]
   },
   {
@@ -72,10 +73,10 @@
    },
    "outputs": [],
    "source": [
-    "image_name = \"<YOUR_IMAGE_NAME>\"\n",
-    "aks_service_name = \"<YOUR_AKS_SERVICE_NAME>\"\n",
-    "aks_name = \"<YOUR_AKS_NAME>\"\n",
-    "aks_location = \"<YOUR_AKS_LOCATION>\""
+    "image_name = \"YOUR_IMAGE_NAME\"\n",
+    "aks_service_name = \"YOUR_AKS_SERVICE_NAME\"\n",
+    "aks_name = \"YOUR_AKS_NAME\"\n",
+    "aks_location = \"YOUR_AKS_LOCATION\""
    ]
   },
   {
@@ -104,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ws = Workspace.from_config()\n",
+    "ws = Workspace.from_config(auth=_get_auth(env_path))\n",
     "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
   },
@@ -189,7 +190,7 @@
    "outputs": [],
    "source": [
     "conda_pack = [\"scikit-learn==0.19.1\", \"pandas==0.23.3\"]\n",
-    "requirements = [\"lightgbm==2.1.2\", \"azureml-defaults\"]"
+    "requirements = [\"lightgbm==2.1.2\", \"azureml-defaults==1.0.10\"]"
    ]
   },
   {
