--- a/05_Speed_Test_WebApp.ipynb
+++ b/05_Speed_Test_WebApp.ipynb
@@ -43,7 +43,8 @@
     "from azureml.core.workspace import Workspace\n",
     "from azureml.core.image import Image\n",
     "from azureml.core.webservice import AksWebservice\n",
-    "from dotenv import set_key, get_key, find_dotenv"
+    "from dotenv import set_key, get_key, find_dotenv\n",
+    "from utilities import _get_auth"
    ]
   },
   {
@@ -52,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(aiohttp.__version__) #3.3.2"
+    "print(aiohttp.__version__) "
    ]
   },
   {
@@ -70,8 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ws = Workspace.from_config()\n",
-    "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
+    "env_path = find_dotenv(raise_error_if_not_found=True)"
    ]
   },
   {
@@ -80,7 +80,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_path = find_dotenv(raise_error_if_not_found=True)"
+    "ws = Workspace.from_config(auth=_get_auth(env_path))\n",
+    "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
   },
   {
