--- a/07_Tear_Down.ipynb
+++ b/07_Tear_Down.ipynb
@@ -28,7 +28,8 @@
     "from azureml.core.image import Image\n",
     "from azureml.core.model import Model\n",
     "from azureml.core.compute import AksCompute\n",
-    "from dotenv import get_key, find_dotenv"
+    "from dotenv import get_key, find_dotenv\n",
+    "from utilities import _get_auth"
    ]
   },
   {
@@ -53,8 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ws = Workspace.from_config()\n",
-    "print(ws.name, ws.resource_group, ws.location, sep = '\\n')"
+    "ws = Workspace.from_config(auth=_get_auth(env_path))\n",
+    "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
   },
   {
