--- a/03_Develop_Scoring_Script.ipynb
+++ b/03_Develop_Scoring_Script.ipynb
@@ -35,7 +35,8 @@
     "import logging\n",
     "from dotenv import set_key, get_key, find_dotenv\n",
     "from azureml.core.workspace import Workspace\n",
-    "from azureml.core.model import Model"
+    "from azureml.core.model import Model\n",
+    "from utilities import _get_auth"
    ]
   },
   {
@@ -69,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ws = Workspace.from_config()\n",
+    "ws = Workspace.from_config(auth=_get_auth(env_path))\n",
     "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
   },
