--- a/06_Real_Time_Scoring.ipynb
+++ b/06_Real_Time_Scoring.ipynb
@@ -79,7 +79,8 @@
     "from utilities import read_questions, text_to_json\n",
     "from azureml.core.workspace import Workspace\n",
     "from azureml.core.webservice import AksWebservice\n",
-    "from dotenv import set_key, get_key, find_dotenv"
+    "from dotenv import set_key, get_key, find_dotenv\n",
+    "from utilities import _get_auth"
    ]
   },
   {
@@ -97,8 +98,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ws = Workspace.from_config()\n",
-    "print(ws.name, ws.resource_group, ws.location, sep = '\\n')"
+    "ws = Workspace.from_config(auth=_get_auth(env_path))\n",
+    "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
   },
   {
