fixed get_auth, docker login

--- a/00_AML_Configuration.ipynb
+++ b/00_AML_Configuration.ipynb
@@ -27,7 +27,7 @@
     "from azureml.core import Workspace\n",
     "from dotenv import set_key, get_key, find_dotenv\n",
     "from pathlib import Path\n",
-    "from utilities import _get_auth"
+    "from utilities import get_auth"
    ]
   },
   {
@@ -168,7 +168,7 @@
     "    resource_group=resource_group,\n",
     "    location=workspace_region,\n",
     "    create_resource_group=True,\n",
-    "    auth=_get_auth(env_path),\n",
+    "    auth=get_auth(env_path),\n",
     "    exist_ok=True,\n",
     ")"
    ]
