--- a/02_Train_On_Local.ipynb
+++ b/02_Train_On_Local.ipynb
@@ -35,7 +35,7 @@
     "from azureml.core import ScriptRunConfig\n",
     "from azureml.core.conda_dependencies import CondaDependencies\n",
     "from dotenv import set_key, get_key, find_dotenv\n",
-    "from utilities import _get_auth"
+    "from utilities import get_auth"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ws = Workspace.from_config(auth=_get_auth(env_path))\n",
+    "ws = Workspace.from_config(auth=get_auth(env_path))\n",
     "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
   },
