--- a/03_Develop_Scoring_Script.ipynb
+++ b/03_Develop_Scoring_Script.ipynb
@@ -31,12 +31,11 @@
    "source": [
     "import sys\n",
     "import pandas as pd\n",
-    "from utilities import text_to_json\n",
+    "from utilities import text_to_json, get_auth\n",
     "import logging\n",
     "from dotenv import set_key, get_key, find_dotenv\n",
     "from azureml.core.workspace import Workspace\n",
-    "from azureml.core.model import Model\n",
-    "from utilities import _get_auth"
+    "from azureml.core.model import Model"
    ]
   },
   {
@@ -70,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ws = Workspace.from_config(auth=_get_auth(env_path))\n",
+    "ws = Workspace.from_config(auth=get_auth(env_path))\n",
     "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
   },
