--- a/04_Create_Image_Deploy_On_AKS.ipynb
+++ b/04_Create_Image_Deploy_On_AKS.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "from utilities import text_to_json\n",
+    "from utilities import text_to_json, get_auth\n",
     "import requests\n",
     "import numpy as np\n",
     "import json\n",
@@ -43,8 +43,7 @@
     "from azureml.core.model import Model\n",
     "from azureml.core.workspace import Workspace\n",
     "from azureml.core.conda_dependencies import CondaDependencies\n",
-    "from dotenv import set_key, get_key, find_dotenv\n",
-    "from utilities import _get_auth"
+    "from dotenv import set_key, get_key, find_dotenv"
    ]
   },
   {
@@ -105,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ws = Workspace.from_config(auth=_get_auth(env_path))\n",
+    "ws = Workspace.from_config(auth=get_auth(env_path))\n",
     "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
   },
@@ -380,7 +379,7 @@
    "outputs": [],
    "source": [
     "if diff <= requested_cores:\n",
-    "    print(\"Not enough cores of NCSv3 in region, asking for {} but have {}\".format(requested_cores, diff))\n",
+    "    print(\"Not enough cores in region, asking for {} but have {}\".format(requested_cores, diff))\n",
     "    raise Exception(\"Core Limit\", \"Note enough cores to satisfy request\")\n",
     "print(\"There are enough cores, you may continue...\")"
    ]
