--- a/06_Real_Time_Scoring.ipynb
+++ b/06_Real_Time_Scoring.ipynb
@@ -76,11 +76,10 @@
     "import json\n",
     "import math\n",
     "import ipywidgets as widgets\n",
-    "from utilities import read_questions, text_to_json\n",
+    "from utilities import read_questions, text_to_json, get_auth\n",
     "from azureml.core.workspace import Workspace\n",
     "from azureml.core.webservice import AksWebservice\n",
-    "from dotenv import set_key, get_key, find_dotenv\n",
-    "from utilities import _get_auth"
+    "from dotenv import set_key, get_key, find_dotenv"
    ]
   },
   {
@@ -98,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ws = Workspace.from_config(auth=_get_auth(env_path))\n",
+    "ws = Workspace.from_config(auth=get_auth(env_path))\n",
     "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
   },
