--- a/07_Tear_Down.ipynb
+++ b/07_Tear_Down.ipynb
@@ -29,7 +29,7 @@
     "from azureml.core.model import Model\n",
     "from azureml.core.compute import AksCompute\n",
     "from dotenv import get_key, find_dotenv\n",
-    "from utilities import _get_auth"
+    "from utilities import get_auth"
    ]
   },
   {
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ws = Workspace.from_config(auth=_get_auth(env_path))\n",
+    "ws = Workspace.from_config(auth=get_auth(env_path))\n",
     "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
   },
