--- a/05_Speed_Test_WebApp.ipynb
+++ b/05_Speed_Test_WebApp.ipynb
@@ -39,12 +39,11 @@
     "from tqdm import tqdm\n",
     "import requests\n",
     "import pandas as pd\n",
-    "from utilities import text_to_json\n",
+    "from utilities import text_to_json, get_auth\n",
     "from azureml.core.workspace import Workspace\n",
     "from azureml.core.image import Image\n",
     "from azureml.core.webservice import AksWebservice\n",
-    "from dotenv import set_key, get_key, find_dotenv\n",
-    "from utilities import _get_auth"
+    "from dotenv import set_key, get_key, find_dotenv"
    ]
   },
   {
@@ -80,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ws = Workspace.from_config(auth=_get_auth(env_path))\n",
+    "ws = Workspace.from_config(auth=get_auth(env_path))\n",
     "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
   },
