--- a/02_Train_On_Local.ipynb
+++ b/02_Train_On_Local.ipynb
@@ -209,7 +209,7 @@
     "    arguments=args,\n",
     "    run_config=run_config_user_managed,\n",
     ")\n",
-    "run = exp.submit(src)"
+    "#run = exp.submit(src)"
    ]
   },
   {
@@ -344,7 +344,7 @@
     "    arguments=args,\n",
     "    run_config=run_config_system_managed,\n",
     ")\n",
-    "run = exp.submit(src)"
+    "#run = exp.submit(src)"
    ]
   },
   {
