added num estimators parameter

--- a/02_Train_On_Local.ipynb
+++ b/02_Train_On_Local.ipynb
@@ -51,6 +51,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Initialize Model Hyperparameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook uses a training script that uses [lightgbm](https://lightgbm.readthedocs.io/en/latest/Python-API.html#scikit-learn-api) . Here we set the number of estimators. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "num_estimators = \"10\"\n",
+    "set_key(env_path, \"num_estimators\", num_estimators)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Initialize Workspace\n",
     "\n",
     "Initialize a workspace object from persisted configuration file."
@@ -191,7 +219,7 @@
     "    \"--outputs\",\n",
     "    \"outputs\",\n",
     "    \"--estimators\",\n",
-    "    \"4000\",\n",
+    "    get_key(env_path, 'num_estimators'),\n",
     "    \"--match\",\n",
     "    \"5\",\n",
     "]"
@@ -462,7 +490,7 @@
     "    \"--outputs\",\n",
     "    \"outputs\",\n",
     "    \"--estimators\",\n",
-    "    \"4000\",\n",
+    "    get_key(env_path, 'num_estimators'),\n",
     "    \"--match\",\n",
     "    \"5\",\n",
     "]"
