Fixing bug in previous edit

--- a/02_Train_On_Local.ipynb
+++ b/02_Train_On_Local.ipynb
@@ -225,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run"
+    "#run"
    ]
   },
   {
@@ -241,8 +241,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "run.wait_for_completion(show_output=True)"
+    "#%%time\n",
+    "#run.wait_for_completion(show_output=True)"
    ]
   },
   {
@@ -258,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run.get_file_names()"
+    "#run.get_file_names()"
    ]
   },
   {
@@ -274,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run.get_metrics()"
+    "#run.get_metrics()"
    ]
   },
   {
@@ -360,7 +360,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run"
+    "#run"
    ]
   },
   {
@@ -376,8 +376,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "run.wait_for_completion(show_output = True)"
+    "#%%time\n",
+    "#run.wait_for_completion(show_output = True)"
    ]
   },
   {
@@ -386,7 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run.get_file_names()"
+    "#run.get_file_names()"
    ]
   },
   {
@@ -395,7 +395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run.get_metrics()"
+    "#run.get_metrics()"
    ]
   },
   {
