Adding the second experiment

--- a/02_Train_On_Local.ipynb
+++ b/02_Train_On_Local.ipynb
@@ -372,7 +372,7 @@
     "    arguments=args,\n",
     "    run_config=run_config_system_managed,\n",
     ")\n",
-    "#run = exp.submit(src)"
+    "run = exp.submit(src)"
    ]
   },
   {
@@ -388,7 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#run"
+    "run"
    ]
   },
   {
@@ -404,8 +404,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%%time\n",
-    "#run.wait_for_completion(show_output = True)"
+    "%%time\n",
+    "run.wait_for_completion(show_output = True)"
    ]
   },
   {
@@ -414,7 +414,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#run.get_file_names()"
+    "run.get_file_names()"
    ]
   },
   {
@@ -423,7 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#run.get_metrics()"
+    "run.get_metrics()"
    ]
   },
   {
