Renabling all experiments

--- a/02_Train_On_Local.ipynb
+++ b/02_Train_On_Local.ipynb
@@ -237,7 +237,7 @@
     "    arguments=args,\n",
     "    run_config=run_config_user_managed,\n",
     ")\n",
-    "#run = exp.submit(src)"
+    "run = exp.submit(src)"
    ]
   },
   {
@@ -253,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#run"
+    "run"
    ]
   },
   {
@@ -269,8 +269,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%%time\n",
-    "#run.wait_for_completion(show_output=True)"
+    "%%time\n",
+    "run.wait_for_completion(show_output=True)"
    ]
   },
   {
@@ -286,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#run.get_file_names()"
+    "run.get_file_names()"
    ]
   },
   {
@@ -302,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#run.get_metrics()"
+    "run.get_metrics()"
    ]
   },
   {
