--- a/04b_Deploy_ML_model_on_IOT_Edge.ipynb
+++ b/04b_Deploy_ML_model_on_IOT_Edge.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "\n",
     "## Outline<a id=\"BackToTop\"></a>\n",
-    "- [Prerequisite](#prerequisite)\n",
+    "- [Prerequisites](#prerequisite)\n",
     "- [Step 1: Create an IoT Hub and Register an IoT Edge device](#step1)\n",
     "- [Step 2: Provision and Configure IoT Edge Device](#step2)\n",
     "- [Step 3: Deploy ML Module on IoT Edge Device](#step3)\n",
@@ -195,20 +195,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'HostName=myiotnub.azure-devices.net;DeviceId=mlaksdevice;SharedAccessKey=ecfDh5YBVa0+UYmnJRNrJ8DK67HRx8q3oDhfh3l+kTU='"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "json_data = !az iot hub device-identity show-connection-string --device-id $device_id --hub-name $iot_hub_name\n",
     "device_connection_string = json.loads(''.join([i for i in json_data if 'WARNING' not in i]))['cs']\n",
