--- a/04b_Deploy_ML_model_on_IOT_Edge.ipynb
+++ b/04b_Deploy_ML_model_on_IOT_Edge.ipynb
@@ -183,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!az iot hub device-identity create --hub-name $iothub_name --device-id $device_id --edge-enabled"
+    "!az iot hub device-identity create --hub-name $iot_hub_name --device-id $device_id --edge-enabled"
    ]
   },
   {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -239,8 +239,8 @@
    ],
    "source": [
     "# Install the repository configuration. Replace <release> with 16.04 or 18.04 as appropriate for your release of Ubuntu.\n",
-    "release = !lsb_release -a | grep Release\n",
-    "release  = release[1].split('\\t')[1]\n",
+    "release = !lsb_release -r\n",
+    "release  = release[0].split('\\t')[1]\n",
     "print(release)"
    ]
   },
@@ -358,7 +358,7 @@
    "outputs": [],
    "source": [
     "# Manual provisioning IoT edge device\n",
-    "!sed -i \"s#\\(device_connection_string: \\).*#\\1\\\"$device_connection_string\\\"#g\" /etc/iotedge/config.yaml"
+    "!sudo sed -i \"s#\\(device_connection_string: \\).*#\\1\\\"$device_connection_string\\\"#g\" /etc/iotedge/config.yaml"
    ]
   },
   {
@@ -740,7 +740,6 @@
     "name": "raymondl"
    }
   ],
-  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python [conda env:MLAKSDeployAML]",
    "language": "python",
