--- a/04b_Deploy_ML_model_on_IOT_Edge.ipynb
+++ b/04b_Deploy_ML_model_on_IOT_Edge.ipynb
@@ -338,7 +338,7 @@
    "outputs": [],
    "source": [
     "# Install the security daemon. The package is installed at /etc/iotedge/.\n",
-    "!sudo apt-get install iotedge"
+    "!sudo apt-get install iotedge -y --no-install-recommends"
    ]
   },
   {
