--- a/04b_Deploy_ML_model_on_IOT_Edge.ipynb
+++ b/04b_Deploy_ML_model_on_IOT_Edge.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from utilities import text_to_json\n",
+    "from utilities import text_to_json, get_auth\n",
     "import requests\n",
     "import numpy as np\n",
     "import json\n",
@@ -93,7 +93,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ws = Workspace.from_config()\n",
+    "#ws = Workspace.from_config()\n",
+    "ws = Workspace.from_config(auth=get_auth(env_path))\n",
     "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
   },
@@ -156,7 +157,7 @@
    "source": [
     "### Create IoT Hub\n",
     "\n",
-    "The following code creates a free F1 hub with name `iot_hub_name` in the resource group IoTEdgeResources."
+    "The following code creates a free F1 hub with name `iot_hub_name` in the resource group `resource_group`."
    ]
   },
   {
@@ -212,7 +213,7 @@
     "\n",
     "In this tutorial, we use a Ubuntu Linux VM as the edge device. We use the same Linux VM where you run [the current notebook](./04b_Deploy_ML_model_on_IOT_Edge.ipynb). The goal is to configure the VM so that it can run IoT Edge runtime and Docker. If use other device as the edge device, please adjust instructions accordingly. \n",
     "\n",
-    "For more information, please check [this doc](https://docs.microsoft.com/en-us/azure/iot-edge/how-to-install-iot-edge-linux) to install iot edge runtime on the edge device.   "
+    "For more information, please check document [Install the Azure IoT Edge runtime on Linux (x64)](https://docs.microsoft.com/en-us/azure/iot-edge/how-to-install-iot-edge-linux) to install iot edge runtime on the edge device.   "
    ]
   },
   {
@@ -278,7 +279,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Install the container runtime"
+    "### Install the container runtime\n",
+    "\n",
+    "This section can be ignored if `docker` is already installed on your device. "
    ]
   },
   {
@@ -383,7 +386,7 @@
     "\n",
     "Get the IP address first. Enter `ifconfig` in your command line and copy the IP address of the docker0 interface.\n",
     "\n",
-    "For more information, please check section `Disable process identification` of [this doc](https://docs.microsoft.com/en-us/azure/iot-edge/tutorial-deploy-machine-learning)."
+    "For more information, please check section `Disable process identification` of document [Tutorial: Deploy Azure Machine Learning as an IoT Edge module ](https://docs.microsoft.com/en-us/azure/iot-edge/tutorial-deploy-machine-learning)."
    ]
   },
   {
@@ -437,13 +440,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# List running modules - keep running forever\n",
-    "# !sudo iotedge list"
+    "When you run `docker ps` command in the edge device, you should see `edgeAgent` container is up running."
    ]
   },
   {
@@ -520,7 +520,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can check the logs of the ML module with the below."
+    "You can check the logs of the ML module with the below. Common issue and resolutions are shown below.\n",
+    "\n",
+    "(1) See error message \"Error: No such container: module_name\". The container is starting up. Please wait for a couple minutes and run this command again."
    ]
   },
   {
@@ -529,8 +531,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# keep running forever\n",
-    "#!docker logs -f $module_name"
+    "!docker logs -f $module_name"
    ]
   },
   {
